welcome.lessons.welcome.variables.Variables.scala.error
Variables:7: error: not found: value nbPas
recule(nbPas:Int)
       ^